--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-	<title>Homepage</title>
+	<title>Homepage on Github</title>
     </head>
     <body>
         <nav></nav>
